alteração de preços

--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                         </div>
                     </li>
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -737,7 +737,7 @@
                             <img class="image-foods" src="./src/image/cardapio/caipirinhaTradicional/melancia.jpg"
                                 alt="caipirinha Tradicional">
                         </div>
-                    </li>
+                    </li> -->
 
                 </ul>
             </section>
@@ -748,7 +748,7 @@
 
                 <ul class="foods-list">
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -759,7 +759,7 @@
                             <img class="image-foods" src="./src/image/cardapio/caipirinhaEspeciais/frutas.jpg"
                                 alt="caipirinha frutas vermelhas">
                         </div>
-                    </li>
+                    </li> -->
 
                     <li class="food-line">
                         <div class="div">
@@ -790,7 +790,7 @@
                                 <h3 class="tittle-foods">Gin Tropical</h3>
                                 <p>Gin, rodelas de limão e laranja e Red bull tropical.
                                 </p>
-                                <b>R$ 35,00</b>
+                                <b>R$ 45,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/gin/tropical.jpg"
                                 alt="Taça de Gin Tropical com rodelas de limão e laranja">
@@ -805,7 +805,7 @@
                                 <h3 class="tittle-foods">Gin Melancia</h3>
                                 <p>Gin, pedaços de Melancia e Red bull de Melancia.
                                 </p>
-                                <b>R$ 35,00</b>
+                                <b>R$ 45,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/gin/melancia.jpg"
                                 alt="Taça de Gin Melancia, pedaços de Melancia e Red bull de Melancia">
@@ -814,7 +814,7 @@
 
 
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -826,9 +826,9 @@
                             <img class="image-foods" src="./src/image/cardapio/gin/gin-tonica.webp"
                                 alt="Gin, limão e tônica">
                         </div>
-                    </li>
+                    </li> -->
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -840,10 +840,10 @@
                             <img class="image-foods" src="./src/image/cardapio/gin/Gin-Maçã.jpg"
                                 alt="Gin,xarope de maçã verde, soda e maçã em pedaço">
                         </div>
-                    </li>
+                    </li> -->
 
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -855,9 +855,9 @@
                             <img class="image-foods" src="./src/image/cardapio/gin/citrus-drink-long-gin.jpg"
                                 alt="Gin, xarope de limão e refrigerante citrus">
                         </div>
-                    </li>
+                    </li> -->
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -869,7 +869,7 @@
                             <img class="image-foods" src="./src/image/cardapio/gin/maracuja.jpg"
                                 alt="Gin, xarope de maracujá,soda e polpa de maracujá.">
                         </div>
-                    </li>
+                    </li> -->
 
                 </ul>
             </section>
