alteração de preço

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                 <p>Acompanha Arroz, Feijão, Fritas e Salada.
                                     <br>Serve 1 pessoas.
                                 </p>
-                                <b>R$ 39,00</b>
+                                <b>R$ 36,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/cavalo.jpg"
                                 alt="Prato com contra filé e fritas">
@@ -308,7 +308,7 @@
                                 <p>Acompanha arroz, feijão, fritas e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 36,00</b>
+                                <b>R$ 33,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/filecontra.png"
                                 alt="Prato com contra filé e fritas">
@@ -326,7 +326,7 @@
                                 <p>Acompanha Arroz, Feijão, Fritas e Salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 33,00</b>
+                                <b>R$ 30,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/frango.jpg"
                                 alt="Prato com filé de frangoie fritas">
@@ -334,7 +334,7 @@
                     </li>
 
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
@@ -347,7 +347,7 @@
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/calabresa.jpg"
                                 alt="Prato com contra filé e fritas">
                         </div>
-                    </li>
+                    </li> -->
 
                     <!-- <li class="food-line">
                         <div class="div">
