alteração de preço

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                 <p>Acompanha arroz, feijão e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 39,00</b>
+                                <b>R$ 34,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/isca.jpg"
                                 alt="Prato com contra filé e fritas">
@@ -388,7 +388,7 @@
                                 <p>Acompanha arroz, feijão e salada.
                                     <br> Serve 1 pessoas.
                                 </p>
-                                <b>R$ 36,00</b>
+                                <b>R$ 32,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/franpa.jpg"
                                 alt="Prato com contra filé e fritas">
@@ -498,7 +498,7 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Picanha Brasileira</h3>
-                                <p>Acompanha vinagrete, molho da casa e pães.
+                                <p>Acompanha Arroz, fritas, Farofa e Vinagrete
                                 </p>
                                 <b>Pequeno: R$ 140,00</b> Serve 2 pessoas
                                 <b>Média: R$ 180,00</b> Serve 3 pessoas
