alteração de preço

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                     mexido e a nossa picanha acompanha arroz e vinagrete.
                                 </p>
                                 <b>Pequeno: R$ 78,00</b>
-                                <b>Grande: R$ 110,00</b>
+                                <b>Medio: R$ 110,00</b>
                                  <b>Grande: R$ 175,00</b>
                                 <b>Familia: R$ 280,00</b>
                             </div>
