acrescentado um novo topico para os pratod comerciais

--- a/index.html
+++ b/index.html
@@ -419,6 +419,117 @@
                 </ul>
             </section>
 
+            <!--Aqui começa os Pratos Principais-->
+            <section class="main-dishes" id="main-dishes">
+
+                <h2 class="tittle">Pratos comerciais <br> <span class="tittle-span">De Terça a Sexta</span></h2>
+
+
+
+                <ul class="foods-list">
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Frango ao molho</h3>
+                                <p>Acompanha Arroz, Farofa e Salada.
+                                </p>
+                                <b>R$ 18,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Calebresa acebolada</h3>
+                                <p>Acompanha arroz, Farofa e salada.
+                                </p>
+                                <b>R$ 18,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+
+
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Bisteca</h3>
+                                <p>Acompanha Arroz, Feijão, Farofa e Salada.
+                                </p>
+                                <b>R$ 20,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+
+
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Filé de Frango</h3>
+                                <p>Acompanha Arroz, Feijão, Farofa, Fritas e Salada.
+                                </p>
+                                <b>R$ 25,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Picadinho</h3>
+                                <p>Acompanha Arroz, Feijão, Farofa e Salada.
+                                </p>
+                                <b>R$ 28,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Contra Filé</h3>
+                                <p>Acompanha Arroz, Feijão, Farofa, Fritas e Salada.
+                                </p>
+                                <b>R$ 30,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Marmita de Feijoada</h3>
+                                <p>Acompanha Arroz, Farofa, Couve, Torresmo e Feijoada.
+                                </p>
+                                <b>R$ 35,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+
+
+
+
+
+
+
+                </ul>
+            </section>
+
+
             <!--Aqui começa os Porções-->
 
             <section class="main-portions" id="portions">
