--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 
             </nav>
 
-
             <!--Aqui começa os Pratos Especiais-->
             <section class="special-dishes" id="special-dishes">
 
@@ -292,7 +291,7 @@
                 </ul>
             </section>
 
-                        <!--Aqui começa os Pratos comerciais-->
+                        <!--Aqui começa os Pratos comerciais
             <section class="main-dishes" id="main-dishes">
 
                 <h2 class="tittle">Pratos comerciais <br> <span class="tittle-span">De Terça a Sexta</span></h2>
@@ -393,7 +392,7 @@
                     </li>
 
                 </ul>
-            </section>
+            </section> -->
 
             <!--Aqui começa os Pratos Principais-->
             <section class="main-dishes" id="main-dishes">
