inclusão de pratos

--- a/index.html
+++ b/index.html
@@ -514,9 +514,41 @@
                         </div>
                     </li>
 
+                    <li class="food-line">
+                        <div class="div">
 
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Picadinho</h3>
+                                <p>Acompanha Arroz, Feijão, Farofa e Salada.
+                                </p>
+                                <b>R$ 28,00</b>
+                            </div>
+                        </div>
+                    </li>
 
+                    <li class="food-line">
+                        <div class="div">
 
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Calabresa</h3>
+                                <p>Acompanha Arroz, Feijão, Farofa e Salada.
+                                </p>
+                                <b>R$ 20,00</b>
+                            </div>
+                        </div>
+                    </li>
+
+                                        <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Frango ao molho</h3>
+                                <p>Acompanha Arroz, Feijão, Farofa e Salada.
+                                </p>
+                                <b>R$ 20,00</b>
+                            </div>
+                        </div>
+                    </li>
 
                 </ul>
             </section>
